--- a/assignment.html
+++ b/assignment.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="try.css">
+    <link rel="stylesheet" href="assignment.css">
 </head>
 <body>
        <header>
@@ -207,4 +207,21 @@
             </section>
         </main>
     </header>
+      <footer class="footer">
+       <main class="sesh">
+        <div class="lo">
+            LOGO
+        </div>
+        <p class="se">
+            Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.
+        </p>
+        <ul class="a">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">How it Works</a></li>
+            <li><a href="">Services</a></li>
+            
+        </ul>
+       </main>
+    </footer>
     
