--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <nav>
                     <div class="nav">
                         <h2 class="logo">LOGO</h2>
-                        <button class="primary"> sign up</button>
+                        <button> sign up</button>
                     </div>
                 </nav>
             </section>
